Version 3.0.0 - 2013-10-21
* Bug fixes (see mercurial logs for details)
* Add calendar view

Version 2.8.0 - 2013-04-22
* Bug fixes (see mercurial logs for details)

Version 2.6.0 - 2012-10-22
* Bug fixes (see mercurial logs for details)

Version 2.4.0 - 2012-08-15
* Initial release