@@ -1,3 +1,5 @@
+* Allow to define effective date of productions
+
 Version 3.0.0 - 2013-10-21
 * Bug fixes (see mercurial logs for details)
 * Add calendar view
